[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20.0"
winit = "0.30.0"
tokio = { version = "1", features = ["full"] }
pollster = "0.2.4"
bytemuck = { version = "*", features = ["derive"]}
cgmath = "*"
